[gd_scene load_steps=13 format=2]

[ext_resource path="res://SceneComponent/Actor/CameraController.tscn" type="PackedScene" id=1]
[ext_resource path="res://SceneComponent/Actor/InteractorComponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://SceneComponent/Actor/Vehicle/Speedometer.tscn" type="PackedScene" id=3]
[ext_resource path="res://SceneComponent/Actor/Vehicle/AthleteRover/RoverWheel.gd" type="Script" id=4]
[ext_resource path="res://SceneComponent/Actor/Vehicle/AthleteRover/RoverAnimation.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/MoonTown/Models/Athlete_Rover/AthleteRover-BallJoints_v4_model.tscn" type="PackedScene" id=6]
[ext_resource path="res://SceneComponent/Actor/Vehicle/AthleteRover/RoverMovement.tscn" type="PackedScene" id=7]
[ext_resource path="res://SceneComponent/Actor/Vehicle/AthleteRover/RoverRideInteractable.tscn" type="PackedScene" id=8]
[ext_resource path="res://SceneComponent/Actor/Vehicle/AthleteRover/RoverInput.tscn" type="PackedScene" id=9]
[ext_resource path="res://Tree/Actor/Vehicle/AthleteRover/AthleteRover.gd" type="Script" id=10]
[ext_resource path="res://SceneComponent/Actor/Vehicle/AthleteRover/RoverWheel.tscn" type="PackedScene" id=11]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 4, 2, 4 )

[node name="AthleteRover" type="RigidBody" groups=[
"athlete_rover",
]]
collision_layer = 4
mass = 1500.0
continuous_cd = true
script = ExtResource( 10 )

[node name="Speedometer" parent="." instance=ExtResource( 3 )]

[node name="Interactor" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.28379, 0 )

[node name="RoverRideInteractable" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.59981, 0 )

[node name="RoverAnimation" parent="." instance=ExtResource( 5 )]

[node name="RoverInput" parent="." instance=ExtResource( 9 )]

[node name="RoverMovement" parent="." instance=ExtResource( 7 )]

[node name="Camera" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.70634, 0 )
dist = 25.0

[node name="rootcol" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.5, 0 )
shape = SubResource( 1 )

[node name="DockPoint" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.45547, 0 )

[node name="effectors" type="Spatial" parent="."]

[node name="effector_l_f" type="Position3D" parent="effectors"]

[node name="effector_l_m" type="Position3D" parent="effectors"]

[node name="effector_l_b" type="Position3D" parent="effectors"]

[node name="effector_r_f" type="Position3D" parent="effectors"]

[node name="effector_r_m" type="Position3D" parent="effectors"]

[node name="effector_r_b" type="Position3D" parent="effectors"]

[node name="left_front_wheel" parent="." instance=ExtResource( 11 )]

[node name="left_mid_wheel" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="left_back_wheel" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="right_front_wheel" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="right_mid_wheel" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="right_back_wheel" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="Model" parent="." instance=ExtResource( 6 )]

[node name="Legs" parent="Model" index="0"]
bones/3/bound_children = [ NodePath("WheelFrontRBoneAttachment") ]
bones/7/bound_children = [ NodePath("WheelMiddleLBoneAttachment") ]
bones/11/bound_children = [ NodePath("WheellMiddleRBoneAttachment") ]
bones/15/bound_children = [ NodePath("WheelBackLBoneAttachment") ]
bones/19/bound_children = [ NodePath("WheelFrontLBoneAttachment") ]
bones/23/bound_children = [ NodePath("WheelBackRBoneAttachment") ]

[editable path="Model"]
